--- a/infrastruct/ansible/roles/x11vnc/tasks/main.yml
+++ b/infrastruct/ansible/roles/x11vnc/tasks/main.yml
@@ -48,6 +48,11 @@
     state: directory
     mode: "0755"
 
+- name: Detect current DISPLAY
+  shell: echo $DISPLAY
+  register: current_display
+  changed_when: false
+
 - name: Create user-level x11vnc service (runs as logged-in user)
   copy:
     dest: "{{ ansible_env.HOME }}/.config/systemd/user/x11vnc.service"
@@ -59,9 +64,9 @@
 
       [Service]
       Type=simple
-      Environment=DISPLAY=:0
+      Environment=DISPLAY={{ current_display.stdout | default(':1') }}
       Environment=XAUTHORITY=/run/user/{{ ansible_user_uid }}/gdm/Xauthority
-      ExecStart=/usr/bin/x11vnc -display :0 -auth /run/user/{{ ansible_user_uid }}/gdm/Xauthority -forever -noxdamage -repeat -rfbauth {{ ansible_env.HOME }}/.vnc/passwd -rfbport {{ vnc_port }} -shared
+      ExecStart=/usr/bin/x11vnc -display {{ current_display.stdout | default(':1') }} -auth /run/user/{{ ansible_user_uid }}/gdm/Xauthority -forever -noxdamage -repeat -rfbauth {{ ansible_env.HOME }}/.vnc/passwd -rfbport {{ vnc_port }} -shared
       ExecStop=/usr/bin/killall x11vnc
       Restart=on-failure
       RestartSec=5
@@ -97,13 +102,13 @@
   systemd:
     name: x11vnc
     enabled: true
-    state: started
+    state: restarted
     scope: user
 
 - name: Display connection info
   debug:
     msg: |
-      VNC server configured as USER SERVICE!
+      VNC server configured for DISPLAY {{ current_display.stdout }}!
 
       Connect via Tailscale (Secure):
       Address: 100.92.153.10:{{ vnc_port }}
