fix(rsrch): include @agents/shared in Docker build context

--- a/.github/workflows/deploy-rsrch.yml
+++ b/.github/workflows/deploy-rsrch.yml
@@ -40,7 +40,8 @@ jobs:
             - name: Build and push Docker image
               uses: docker/build-push-action@v5
               with:
-                  context: agents/rsrch
+                  context: agents
+                  file: agents/rsrch/Dockerfile
                   push: true
                   tags: ${{ steps.meta.outputs.tags }}
                   labels: ${{ steps.meta.outputs.labels }}
