feat(nomad): add Memgraph with MAGE and Lab deployment
- memgraph-mage: graph database with algorithm library
- lab: web UI for visualization and queries
- Traefik routing to memgraph.<ip>.nip.io
- Data persistence at /opt/memgraph/data

--- a/infrastruct/nomad_stack/roles/nomad_jobs/tasks/main.yml
+++ b/infrastruct/nomad_stack/roles/nomad_jobs/tasks/main.yml
@@ -34,6 +34,17 @@
     group: 1000
     mode: "0750"
 
+- name: Create Memgraph data directories
+  ansible.builtin.file:
+    path: "{{ item }}"
+    state: directory
+    owner: root
+    group: root
+    mode: "0755"
+  loop:
+    - /opt/memgraph/data
+    - /opt/memgraph/log
+
 - name: Create Obsidian data directories with correct permissions (UID 1000)
   ansible.builtin.file:
     path: "{{ item }}"
@@ -127,6 +138,7 @@
     - rsrch-browser.nomad.hcl.j2
     - angrav-browser.nomad.hcl.j2
     - rsrch.nomad.hcl.j2
+    - memgraph.nomad.hcl.j2
 
 - name: Run Traefik
   ansible.builtin.command: nomad job run /opt/nomad/jobs/traefik.nomad.hcl
@@ -160,6 +172,12 @@
 
 - name: Run Rsrch Server
   ansible.builtin.command: nomad job run /opt/nomad/jobs/rsrch.nomad.hcl
+  environment:
+    NOMAD_ADDR: http://127.0.0.1:4646
+  changed_when: false
+
+- name: Run Memgraph
+  ansible.builtin.command: nomad job run /opt/nomad/jobs/memgraph.nomad.hcl
   environment:
     NOMAD_ADDR: http://127.0.0.1:4646
   changed_when: false
