--- a/.github/workflows/deploy-rsrch.yml
+++ b/.github/workflows/deploy-rsrch.yml
@@ -37,11 +37,18 @@ jobs:
                       type=raw,value=latest,enable=${{ github.ref == 'refs/heads/main' }}
                       type=sha
 
+            - name: Set up QEMU
+              uses: docker/setup-qemu-action@v3
+
+            - name: Set up Docker Buildx
+              uses: docker/setup-buildx-action@v3
+
             - name: Build and push Docker image
               uses: docker/build-push-action@v5
               with:
                   context: agents
                   file: agents/rsrch/Dockerfile
+                  platforms: linux/amd64,linux/arm64
                   push: true
                   tags: ${{ steps.meta.outputs.tags }}
                   labels: ${{ steps.meta.outputs.labels }}
