feat(infra): enable Goose Web GUI on port 3001
- Update Goose Nomad job to run 'goose web' instead of shell loop
- Configure Traefik routing/tags
- Fix permission issues by running as uid 1000 and mounting to /home/goose
- Update Ansible tasks to set correct directory ownership

--- a/infrastruct/nomad_stack/roles/nomad_jobs/tasks/main.yml
+++ b/infrastruct/nomad_stack/roles/nomad_jobs/tasks/main.yml
@@ -112,16 +112,16 @@
   ansible.builtin.file:
     path: /opt/goose/config
     state: directory
-    owner: root
-    group: root
+    owner: 1000
+    group: 1000
     mode: "0755"
 
 - name: Create Goose state directory
   ansible.builtin.file:
     path: /opt/goose/state
     state: directory
-    owner: root
-    group: root
+    owner: 1000
+    group: 1000
     mode: "0755"
 
 - name: Create rsrch secrets directory
