fix(infra): resolve Goose deployment issues (port conflict & permissions)
- Move Goose Web to port 3099 (resolved conflict with anythingllm/obsidian on 3001/3002)
- Mount entire /home/goose for persistence (resolved permission denied on root-owned parent directories)
- Update Ansible to create /opt/goose/home
- Add explicit Traefik loadbalancer port tag

--- a/infrastruct/nomad_stack/roles/nomad_jobs/tasks/main.yml
+++ b/infrastruct/nomad_stack/roles/nomad_jobs/tasks/main.yml
@@ -108,17 +108,9 @@
     group: 999
     mode: "0750"
 
-- name: Create Goose config directory
+- name: Create Goose home directory
   ansible.builtin.file:
-    path: /opt/goose/config
-    state: directory
-    owner: 1000
-    group: 1000
-    mode: "0755"
-
-- name: Create Goose state directory
-  ansible.builtin.file:
-    path: /opt/goose/state
+    path: /opt/goose/home
     state: directory
     owner: 1000
     group: 1000
