--- a/agents/shared/package.json
+++ b/agents/shared/package.json
@@ -10,7 +10,9 @@
     },
     "dependencies": {
         "axios": "^1.13.2",
+        "dotenv": "^16.3.1",
         "ioredis": "^5.3.2",
+        "langfuse": "^3.0.0",
         "uuid": "^9.0.0"
     },
     "devDependencies": {
