fix(rsrch): build shared lib in dockerfile for CI

--- a/agents/rsrch/Dockerfile
+++ b/agents/rsrch/Dockerfile
@@ -9,6 +9,9 @@ COPY shared ./shared/
 # Update package.json to point to the correct shared module path
 RUN sed -i 's|file:../shared|file:./shared|g' package.json
 
+# Build shared library first (required for CI where dist/ is missing)
+RUN cd shared && npm install && npm run build
+
 # Install dependencies (browsers are already in the image)
 RUN npm install
 
