feat(youtrack.conf): end-to-end IaC for workflows and fields
- Implemented WorkflowClient for internal API workflow/rule management
- Fixed attach_field HTTP 500 by adding proper $type mapping
- Fixed duplicate action generation with list_to_set/2 in Prolog
- Fixed add_state_value boolean type conversion
- Updated demo project config with example workflows

--- a/infrastruct/configs/youtrack.conf/projects/demo/project.yaml
+++ b/infrastruct/configs/youtrack.conf/projects/demo/project.yaml
@@ -28,12 +28,7 @@ fields:
       - High
       - Medium
       - Low
-
-  # Simple text field
-  - name: Description
-    type: text
-    can_be_empty: true
-
+  #
   # Estimated time
   - name: Estimation
     type: period
@@ -46,3 +41,6 @@ workflows:
       - name: tag-critical-urgent
         type: on-change
         script_file: workflows/tag-critical-urgent.js
+      - name: log-changes-iac-test
+        type: on-change
+        script_file: workflows/log-changes.js
