feat(youtrack): implement field defaults via YAML

--- a/infrastruct/configs/youtrack.conf/projects/demo/project.yaml
+++ b/infrastruct/configs/youtrack.conf/projects/demo/project.yaml
@@ -23,6 +23,7 @@ fields:
   - name: Priority
     type: enum
     bundle: PriorityBundle
+    default_value: Medium
     values:
       - Critical
       - High
