feat(youtrack): implement agile boards via YAML

--- a/infrastruct/configs/youtrack.conf/projects/demo/project.yaml
+++ b/infrastruct/configs/youtrack.conf/projects/demo/project.yaml
@@ -6,6 +6,10 @@ project:
   shortName: DEMO
   leader: admin
 
+boards:
+  - name: "Demo Agile Board"
+    column_field: "State"
+
 fields:
   # State field for issue workflow
   - name: State
