--- a/infrastruct/configs/youtrack.conf/projects/demo/project.yaml
+++ b/infrastruct/configs/youtrack.conf/projects/demo/project.yaml
@@ -18,6 +18,9 @@ boards:
       - "In Progress"
       - "Done"
     swimlane_field: "Subsystem"
+    color_coding:
+      mode: field
+      field: Priority
 
   - name: "Sprint Board 2026"
     column_field: "State"
