feat(youtrack): implement column WIP limits (Phase 8)
- Add ColumnConfig schema with min_wip/max_wip
- Translator generates target_board_column_wip facts
- Prolog drift detection for WIP limits
- Sensing reads wipLimit from API
- Actuator updates column WIP limits via API
- Live tested and idempotency verified

--- a/infrastruct/configs/youtrack.conf/projects/demo/project.yaml
+++ b/infrastruct/configs/youtrack.conf/projects/demo/project.yaml
@@ -15,7 +15,8 @@ boards:
       - "All Users"
     columns:
       - "To do"
-      - "In Progress"
+      - name: "In Progress"
+        max_wip: 3
       - "Done"
     swimlane_field: "Subsystem"
     color_coding:
