feat(youtrack): add backlog configuration (Phase 10)
- Add backlog_query field to AgileBoardConfig schema
- Translator generates target_board_backlog facts
- Prolog drift detection with drifted_board_backlog
- API query fetches backlog(query)
- Actuator creates/updates SavedQuery and links to board
- Live tested and idempotency verified

--- a/infrastruct/configs/youtrack.conf/projects/demo/project.yaml
+++ b/infrastruct/configs/youtrack.conf/projects/demo/project.yaml
@@ -22,6 +22,7 @@ boards:
     color_coding:
       mode: field
       field: Priority
+    backlog_query: "project: DEMO State: Open #Unresolved"
 
   - name: "Sprint Board 2026"
     column_field: "State"
