feat(youtrack): add global Tags and Saved Queries (Phase 11)
- Add TagConfig and SavedQueryConfig schema models
- Update translator for target_tag and target_saved_query facts
- Add Prolog action rules for create/update/delete
- Add controller API methods get_tags() and get_saved_queries()
- Add inference sensing for curr_tag and curr_saved_query
- Add actuator CRUD methods and execute_plan handlers
- Fix parser to include tags and saved_queries in single-project format
- Live tested and idempotency verified

--- a/infrastruct/configs/youtrack.conf/projects/demo/project.yaml
+++ b/infrastruct/configs/youtrack.conf/projects/demo/project.yaml
@@ -74,3 +74,18 @@ workflows:
       - name: log-changes-iac-test
         type: on-change
         script_file: workflows/log-changes.js
+
+# Global Tags managed by IaC
+tags:
+  - name: "urgent"
+    untag_on_resolve: true
+  - name: "blocked"
+    untag_on_resolve: false
+  - name: "needs-review"
+
+# Saved Queries (Searches)
+saved_queries:
+  - name: "My Open Issues"
+    query: "project: DEMO for: me State: -Done"
+  - name: "Critical Bugs"
+    query: "project: DEMO Priority: Critical"
