--- a/agents/rsrch/package.json
+++ b/agents/rsrch/package.json
@@ -24,6 +24,7 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "falkordb": "^6.4.0",
+    "js-yaml": "^4.1.1",
     "langfuse": "^3.38.6",
     "playwright": "1.41.2",
     "playwright-extra": "^4.3.6",
@@ -33,6 +34,7 @@
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
+    "@types/js-yaml": "^4.0.9",
     "@types/node": "^20.19.27",
     "ts-node": "^10.9.1",
     "typescript": "^5.3.2",
