feat(ansible): add zellij role and install locally

--- a/infrastruct/ansible/setup_local.yml
+++ b/infrastruct/ansible/setup_local.yml
@@ -18,3 +18,6 @@
       tags: x11vnc
       # vars:
       #   vnc_password: "your-secure-password"  # Pass via -e instead
+    - role: zellij
+      tags: zellij
+
