feat(infra): Add local Memgraph Ansible role, fix Neo4j network mode
- Created local_memgraph role with systemd service template
- Fixed Neo4j to use host network mode for proper Traefik routing
- Added HTTPS with Let's Encrypt for Neo4j
- Updated playbook.yml to deploy Memgraph on local machine
- Added README documentation for local_memgraph role

--- a/infrastruct/nomad_stack/playbook.yml
+++ b/infrastruct/nomad_stack/playbook.yml
@@ -28,3 +28,13 @@
   roles:
     - role: nomad_jobs
       tags: [nomad_jobs]
+
+# Local-only services (Memgraph on ntb)
+- name: Deploy Local Services
+  hosts: local
+  become: true
+  vars:
+    ansible_python_interpreter: /usr/bin/python3
+  roles:
+    - role: local_memgraph
+      tags: [local_memgraph]
