--- a/agents/rsrch/package.json
+++ b/agents/rsrch/package.json
@@ -21,6 +21,7 @@
   "license": "ISC",
   "dependencies": {
     "@agents/shared": "file:../shared",
+    "axios": "^1.13.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "falkordb": "^6.4.0",
