--- a/infrastruct/nomad_stack/group_vars/servers.yml
+++ b/infrastruct/nomad_stack/group_vars/servers.yml
@@ -2,3 +2,6 @@ ansible_user: ubuntu
 ansible_ssh_private_key_file: ~/.ssh/id_rsa
 # Set this to your OCI Public IP for correct Traefik routing
 # public_ip: 123.456.789.0
+
+# Windmill API token for rsrch server (from Vault: secret/agents/windmill)
+windmill_token: "Xz8URRuZ93NdWibjGs9tzpkSoypVAUNd"
