feat(infra): Add gemini_cli Ansible role for OTEL/Langfuse config
- Created gemini_cli role to configure ~/.gemini/settings.json
- Adds otlpHeaders with Langfuse Basic Auth
- Merges with existing settings (preserves MCP servers, UI prefs)
- Added local.yml group_vars with Langfuse credentials
- Updated playbook.yml with new role (no sudo needed)

--- a/infrastruct/nomad_stack/playbook.yml
+++ b/infrastruct/nomad_stack/playbook.yml
@@ -38,3 +38,13 @@
   roles:
     - role: local_memgraph
       tags: [local_memgraph]
+
+# Local user configuration (no sudo needed)
+- name: Configure Local User Tools
+  hosts: local
+  become: false
+  vars:
+    ansible_python_interpreter: /usr/bin/python3
+  roles:
+    - role: gemini_cli
+      tags: [gemini_cli]
