fix(rsrch): align playwright to v1.57.0 and set up local registry
- Updated Dockerfile base to mcr.microsoft.com/playwright:v1.57.0-jammy
- Updated package.json playwright dependency to 1.57.0
- Set up local Docker registry on halvarm:5001
- Configured Nomad to use localhost:5001/rsrch-server:latest with force_pull=true
- Fixed Playwright version mismatch that was preventing browser launch

Infrastructure changes on halvarm:
- local-registry container running on port 5001
- Nomad job updated to pull from local registry

--- a/agents/rsrch/package.json
+++ b/agents/rsrch/package.json
@@ -27,7 +27,7 @@
     "falkordb": "^6.4.0",
     "js-yaml": "^4.1.1",
     "langfuse": "^3.38.6",
-    "playwright": "1.41.2",
+    "playwright": "^1.57.0",
     "playwright-extra": "^4.3.6",
     "puppeteer-core": "^21.5.0",
     "puppeteer-extra-plugin-stealth": "^2.11.2"
