--- a/agents/jules-go/config.yaml
+++ b/agents/jules-go/config.yaml
@@ -8,7 +8,7 @@ jules_api_key: ""
 browser_path: ""
 
 # The URL for the FalkorDB instance.
-falkordb_url: "redis://localhost:6379"
+falkordb_url: "localhost:6379"
 
 # The maximum number of concurrent browser sessions.
 max_concurrent_sessions: 15
