fix(rsrch): NotebookLM browser automation fixes
- Updated docker-compose ports (VNC:5902, CDP:9225) to avoid conflicts
- Fixed uploadLocalFile to detect already-open dialog
- Updated chat input selector for Czech UI ('Začněte psát...')
- Added stale state cleanup in test script (navigate + Escape)

Testing revealed:
- PDF upload works correctly
- Web URLs are static (no auto-sync per Google docs)
- GDocs have manual sync button only
- Chat is disabled until source processing completes

--- a/agents/rsrch/docker-compose.yml
+++ b/agents/rsrch/docker-compose.yml
@@ -4,9 +4,9 @@ services:
   chromium:
     build: ./browser
     ports:
-      - "5900:5900"
+      - "5902:5900"  # VNC (changed from 5900 to avoid conflict with local x11vnc)
       - "3005:3000"
-      - "9223:9223" # CDP port (socat proxy)
+      - "9225:9223" # CDP port (changed from 9223 to avoid conflict with angrav-browser)
     ipc: host
     volumes:
       - ${HOME}/.config/rsrch/user-data:/app/user-data
