--- a/agents/rsrch/docker-compose.yml
+++ b/agents/rsrch/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     environment:
       - PORT=${PORT:-3001}
       - WINDMILL_TOKEN=${WINDMILL_TOKEN}
-      - BROWSER_CDP_ENDPOINT=http://host.docker.internal:9223
+      - BROWSER_CDP_ENDPOINT=http://chromium:9223
       - PERPLEXITY_USER_DATA_DIR=/app/config/user-data
       - AUTH_FILE=/app/config/auth.json
     extra_hosts:
