fix(docker): Fix CDP and FalkorDB connections in Docker environment
- Set BROWSER_CDP_ENDPOINT to use Docker internal DNS (chromium:9223)
- Add FALKORDB_HOST=falkordb environment variable for graph database
- Add depends_on for chromium and falkordb services
- Add --remote-allow-origins=* flag to Chrome for cross-origin CDP
- Replace socat proxy with Node.js HTTP/WS proxy for Host header rewriting
- Add lazy browser initialization in /gemini/research endpoint

--- a/agents/rsrch/docker-compose.yml
+++ b/agents/rsrch/docker-compose.yml
@@ -32,6 +32,10 @@ services:
       - BROWSER_CDP_ENDPOINT=http://chromium:9223
       - PERPLEXITY_USER_DATA_DIR=/app/config/user-data
       - AUTH_FILE=/app/config/auth.json
+      - FALKORDB_HOST=falkordb
+    depends_on:
+      - chromium
+      - falkordb
     extra_hosts:
       - "host.docker.internal:host-gateway"
     command: npm run serve
