feat(youtrack): mirror projects (RSRCH, JULES, QUEST, DOWNLOADER, MAPOBSI, YOUSIDIAN) and patch IaC tool
- Added Vision, Goal-LT, Goal-ST to std-agent-v1 template
- Added project definitions for all new agents/integrations
- Patched main.py to skip create_field actions due to API invisibility bug
- (Note: Projects were provisioned via curl as fallback, but definitions are committed for IaC sync)

--- a/infrastruct/configs/youtrack.conf/projects/angrav/project.yaml
+++ b/infrastruct/configs/youtrack.conf/projects/angrav/project.yaml
@@ -3,7 +3,7 @@ project:
   shortName: ANGRAV
   leader: admin
   template: std-agent-v1
-  description: "Playwright-based session scraper for Antigravity."
+  description: "Playwright-based automation suite for Antigravity IDE. Features CLI, OpenAI API Server, Context Injection (@menu), and Terminal Management."
 
 boards:
   - name: "ANGRAV Board"
