--- a/agents/proj/pyproject.toml
+++ b/agents/proj/pyproject.toml
@@ -12,6 +12,7 @@ dependencies = [
     "httpx>=0.27.0",
     "rich>=13.0.0",
     "typer>=0.12.0",
+    "falkordb>=1.0.0",
 ]
 
 [project.optional-dependencies]
