feat(ansible): add remarkable-dualboot role for reMarkable 2 dual-boot setup
- Add complete Ansible role with preflight, backup, flash, and dualboot tasks
- Include vendored switch.sh from ddvk/remarkable-update
- Add QEMU setup script for safe testing before deployment
- Update inventory with remarkable host group
- Add setup_remarkable.yml playbook with user confirmation prompt

--- a/infrastruct/ansible/inventory.yml
+++ b/infrastruct/ansible/inventory.yml
@@ -23,3 +23,15 @@ workstations:
       ansible_connection: ssh
       ansible_shell_type: powershell
       ansible_become: false
+
+# reMarkable tablet (connected via USB)
+remarkable:
+  hosts:
+    rm2:
+      ansible_host: 10.11.99.1
+      ansible_user: root
+      ansible_connection: ssh
+      ansible_shell_type: sh
+      remarkable_ssh_port: 22
+      # Override ansible_host if using WiFi:
+      # ansible_host: 192.168.1.xxx
